@@ -1,1 +1,2 @@
 DIST ovirt-image-uploader-3.2.1.tar.gz 406590 SHA256 fb8e692cb5f03ed5a7eaa9628fae0c97ddccbe27a0d7a0f944fb3ccb235ae602 SHA512 e3784da53d2fdeff8a1506e323f058d72afe2ad7a02bedbda73b904cf455191c1209edb61755367f2bf7d919dea24cb747232cfa0a5f8176811e2c5b7ae458b0 WHIRLPOOL 3e86574af06aea0e067b800e7a8130f451f180f606e3e410629a13ed77914d31a141c465715ded5e1533b6efc95f1c61187fd62b06413a34c2bc58b22f1bd5cd
+DIST ovirt-image-uploader-3.4.0.tar.gz 234543 SHA256 ef1527d563aa1738952497c05b268cb029fb616dfc47b8172c48afb9e6e8ff74 SHA512 10444642d36027f2f6f98342fde925c0c2b82d578fc6b25861aee0c58cdbbf8db03c5fedff889583b21553499b4932d801e1bbc5219d0b26847a09f7a34ef275 WHIRLPOOL 5f0367e5d0470342d2c9996197633fbeef1ef13a9de85416135876eca044a92fa2b91ac7a77161a3b0443d9664c7e0119f4d0caedce9b0c9cabd0067b90263b1
